@@ -939,6 +939,13 @@ class Numeric(_DateAffinity, TypeEngine):
                 # we're a "numeric", DBAPI will give us Decimal directly
                 return None
             else:
+                util.warn("Dialect %s+%s does *not* support Decimal objects natively, "
+                            "and SQLAlchemy must convert from floating point - "
+                            "rounding errors and other issues may occur. "
+                            "Please consider storing Decimal numbers as strings or "
+                            "integers on this platform for lossless storage." % 
+                            (dialect.name, dialect.driver))
+                
                 # we're a "numeric", DBAPI returns floats, convert.
                 if self.scale is not None:
                     return processors.to_decimal_processor_factory(_python_Decimal, self.scale)
@@ -976,7 +983,8 @@ class Float(Numeric):
         :param precision: the numeric precision for use in DDL ``CREATE TABLE``.
         
         :param asdecimal: the same flag as that of :class:`Numeric`, but
-          defaults to ``False``.
+          defaults to ``False``.   Note that setting this flag to ``True``
+          results in floating point conversion.
 
         """
         self.precision = precision
